更新背景图

--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>三消游戏推广</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        hr {color:sienna;}
+        p {margin-left:20px;}
+        body {background-image:url("bg.jpg");}
+        background-size: cover;
+    </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0LYRKV6ETS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-0LYRKV6ETS');
+</script>
 <body>
-    <header>
+    <!-- <header>
         <h1>欢迎来到神奇的三消游戏世界！</h1>
         <p>加入我们，体验刺激有趣的三消游戏！</p>
     </header>
@@ -31,6 +45,6 @@
         <p>&copy; 2023 上海石零与网络科技有限公司. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> -->
 </body>
 </html>
