更新图片展示

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>三消游戏推广</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        hr {color:sienna;}
+        /*hr {color:sienna;}
         p {margin-left:20px;}
-        body {background-image:url("bg.jpg");}
-        background-size: cover;
+        body {background-image:url("bg.jpg");}*/
     </style>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -21,6 +20,9 @@
   gtag('config', 'G-0LYRKV6ETS');
 </script>
 <body>
+    <div class="msg_desc">
+    <img style="max-width:100%;overflow:hidden;" src="bg.jpg" alt="">
+    </div>
     <!-- <header>
         <h1>欢迎来到神奇的三消游戏世界！</h1>
         <p>加入我们，体验刺激有趣的三消游戏！</p>
